--- a/Recycler/.gitignore
+++ b/Recycler/.gitignore
@@ -5,7 +5,14 @@
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/gradle.xml
+/.idea/assetWizardSettings.xml
+/.idea/dictionaries
+/.idea/caches
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+
+
