Agregado la implementación de listas con ListView

--- a/ListView/app/build.gradle
+++ b/ListView/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "practices.com.recycler"
+        applicationId "practices.com.listview"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
@@ -28,7 +28,6 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    //test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
